--- a/demoSB/src/main/resources/application.properties
+++ b/demoSB/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=test_user_pro1
 spring.datasource.password=Ty65%$Re
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
