Fix some backend endpoints to work correctly, expand additional endpoints, add basic ui from standard of heroes example

--- a/demoSB/src/main/resources/application.properties
+++ b/demoSB/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Ty65%$Re
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-
+server.servlet.context-path=/api
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
