Add initial dockerfile, add file upload, download, list files, and delete methods

--- a/demoSB/src/main/resources/application.properties
+++ b/demoSB/src/main/resources/application.properties
@@ -7,5 +7,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 server.servlet.context-path=/api
 
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
+#spring.servlet.multipart.location=~/tmp/
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+
+multipart.location=/Users/phillip/uploads/
